argo-workflows/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-server
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: argo-https-insecure@kubernetescrd
